# NEAT

./: .gitignore  README.md  best_xor_genome.pkl  xor.sbatch
backprop/: .gitignore  README.md  pyproject.toml  run_toy2d.py
backprop/examples/: run_xor.sh
backprop/src/backprop_neat/: __init__.py  activations.py  config.py
backprop/src/backprop_neat/cli/: toy2d.py
backprop/src/backprop_neat/datasets/: __init__.py  toy2d.py
backprop/src/backprop_neat/evolution/: __init__.py  population.py  species.py
backprop/src/backprop_neat/genetics/: __init__.py  genes.py  genome.py
backprop/src/backprop_neat/jax/: __init__.py  training.py
backprop/src/backprop_neat/visualization/: __init__.py  decision_boundary.py  history.py  simple_png.py  topology.py
backprop/tests/: test_datasets.py  test_genome.py  test_integration.py  test_jax_training.py
neat/: __init__.py  activations.py  config.py  exceptions.py  serialization.py
neat/evolution/: __init__.py  compatibility.py  population.py  reproduction.py  species.py
neat/genetics/: __init__.py  genes.py  genome.py
neat/jax/: __init__.py  execution.py
neat/nn/: __init__.py  execution.py
slimevolley/baseline_train/: __init__.py  episodes.py  evaluation.py  output.py  policy.py  topology_svg.py  train.py
slimevolley/gpu_selfplay/: __init__.py  bootstrap.py  env.py  (+7 more)
tests/: test_activations.py  test_crossover.py  test_forward.py  test_genome_mutation.py  test_jax_execution.py  test_population.py
xor/: __init__.py  accuracy.py  fitness.py  mse.py  output_utils.py  plot.py  task.py  topology.py  xor_main.py
(+71 files in other folders)
